--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,27 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "resolveJsonModule": true,
-    "jsx": "react"
+    "isolatedModules": true,
+    "noEmit": true
   },
   "include": [
-    "src/**/*"
+    "src",
+    "models",
+    "utils",
+    "api"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
