--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,26 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "vercel/node@20.x"
+  "builds": [
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node@18"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
-  },
+  ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/bin/www"
+      "dest": "/index.html"
     }
   ]
 }
