--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.js": {
-      "runtime": "vercel/node@20.x"
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x"
     }
   },
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/bin/www"
+      "dest": "/index.html"
     }
   ]
 }
