--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "server": "tsx src/server.ts"
+    "start": "vite preview"
   },
   "dependencies": {
     "@types/node": "^20.11.24",
-    "@vercel/node": "^3.0.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -32,6 +31,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "@vercel/node": "^5.1.16",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
