--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.ts": {
+    "api/**/*.(ts)": {
       "runtime": "nodejs20.x"
     }
   },
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "^/api/.*",
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
+      "src": ".*",
       "dest": "/index.html"
     }
   ]
