--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,20 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "target": "ES2020",
+    "module": "commonjs",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "outDir": "./dist",
-    "rootDir": "./",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "outDir": "./dist",
+    "rootDir": "./",
+    "noEmit": false
   },
-  "include": [
-    "src",
-    "models",
-    "utils",
-    "api"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src", "models", "utils", "api"],
+  "exclude": ["node_modules", "dist"]
 }
