--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "routes": [
-    { "src": "^/api/.*", "dest": "/api/$1" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1" },
     { "src": ".*", "dest": "/index.html" }
   ]
 }
