--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,9 @@
       "continue": true
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
