--- a/vercel.json
+++ b/vercel.json
@@ -2,36 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    },
-    {
       "src": "api/**/*.ts",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
-  {
-    "src": "^/api/(.*)$",
-    "dest": "/api/$1"
-  },
-  {
-    "handle": "filesystem"
-  },
-  {
-    "src": "/assets/(.*)",
-    "headers": {
-      "cache-control": "public, max-age=31536000, immutable"
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1.ts"
     },
-    "continue": true
-  },
-  {
-    "src": "/(.*)",
-    "dest": "/index.html"
-  }
-]
-
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
