--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.0",
     "nodemailer": "^6.9.12",
