--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
     "@types/node": "^20.11.24",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
@@ -18,11 +19,16 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.0",
     "nodemailer": "^6.9.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-intersection-observer": "^9.8.1",
-    "react-router-dom": "^6.22.3"
+    "react-parallax-tilt": "^1.7.299",
+    "react-router-dom": "^6.22.3",
+    "react-type-animation": "^3.2.0",
+    "three": "^0.177.0",
+    "tsparticles-engine": "^2.12.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
@@ -50,5 +56,6 @@
   },
   "engines": {
     "node": ">=20.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
